--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,7 +1,7 @@
 header{
     text-align: center;
-    background-color: rgb(65, 64, 64);
-    color: white;
+    background-color: #0085CA;
+    color: black;
     height: 75px;
     margin-bottom: 20px;
 }
@@ -13,13 +13,31 @@ header{
 
 .history {
     width: 100%;
+    background-color:#0085CA;
+	border:1px solid #0b0e07;
+    color: black;
+    font-family:Arial;
 }
+
+#button {
+	background-color:#0085CA;
+	border:1px solid #0b0e07;
+	color: black;
+	font-family:Arial;
+    width: 25%;
+}
+
+button:hover {
+	background-color:#BFC0BF;
+}
+
 .forecast{
     margin-bottom: 10px;
-    background-color: blue;
+    background-color: #0085CA;
     color: white;
 }
 
 #currentWeather{
     border: black;
 }
+
